--- a/report.Rmd
+++ b/report.Rmd
@@ -1,70 +1,88 @@
 ---
-title: 'Belkin vs. Elago: Exploratory Data Analysis'
+title: 'Belkin vs. Elago'
+subtitle: 'Exploratory Data Analysis'
 author: "Murilo Miranda"
-date: "`r format(Sys.Date(), "%Y-%B-%d")`"
+date: "`r format(Sys.Date(), '%Y-%B-%d')`"
 output:
   html_document:
-    df_print: paged
+    toc: true # table of content true
+    toc_depth: 3  # upto three depths of headings (specified by #, ## and ###)
+    theme: united  # many options for theme, this one is my favorite.
+    highlight: tango  # specifies the syntax highlighting style
   pdf_document: default
-version: '0.1'
+version: '0.2'
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(comment=NA, prompt=FALSE, cache=FALSE, echo=TRUE)
+
+library(summarytools)
+st_options(plain.ascii   = FALSE,       # One of the essential settings
+           style         = "rmarkdown", # Idem.
+           dfSummary.silent  = TRUE,# Suppresses messages about temporary files
+           footnote      = NA,          # Keeping the results minimalistic
+           subtitle.emphasis = FALSE)   # For the vignette theme, this gives
+                                            # much better results. Your mileage may vary.
+
+st_css()
 ```
 
-```{r, message=FALSE}
+```{r, message = FALSE, echo=FALSE}
 library(dplyr)
 library(ggplot2)
+library(RColorBrewer)
 ```
 
-# Look at the raw data
-The data has empty values and semicolon is used to separated into different columns. I used read.csv2 function because the separator character is the semicolon,but I could use read.csv and change the sep-argument to ";". To solve the problem with empty values, I used na.strings argument and gave as values empty value and single space. Now, when read.csv2 sees empty or single space it counts as missing values.
+# Loading data
+The data has empty values and the columns are separated by semicolon. **read.csv2** function was used because it has semi-colon as default sep-argument. To solve the problem with empty values, na.strings argument was used with empty value and single space.
 
-```{r}
+```{r, echo=FALSE}
 data <- read.csv2("surveyBelkinElago.csv", na.strings = c("", " "))
-head(data)
-```
 
-
-### Check data types & missing values
-I think elevel, car and zipcode are factors, so I converted them. There are 5000 missing values in the brand feature.
-
-```{r}
 str(data)
 ```
 
-### Convert data types
-```{r}
+# Preprocessing
+## Check data types
+In the data-set elevel, car and zipcode are integers. In reality, they are categorical variables, so they are converted into factor. The missing values are converted into 'No Response'.
+
+## Data conversions
+```{r, echo=FALSE}
 data$elevel <- as.factor(data$elevel)
 data$car <- as.factor(data$car)
 data$zipcode <- as.factor(data$zipcode)
-summary(data)
+
+# convert NA to 'No Response' in the brand variable
+levels(data$brand) <- c(levels(data$brand), "No Response")
+data$brand[is.na(data$brand)] <- "No Response" 
+data$brand <- factor(data$brand, levels = c("No Response", "Belkin", "Elago"))
+str(data)
 ```
 
-### Check duplicate observations
-```{r}
+## Check duplicate observations
+```{r, echo=FALSE}
 anyDuplicated(data)
 ```
 
-### Check correlation between numeric features
-```{r}
+## Correlation between variables
+```{r, echo=FALSE}
 cor(data[, c("salary","age","credit")])
 ```
 
 ### Are missing values at random?
-A method I use is a shadow matrix, in which the dataset consists of indicator features where a 0 is given if a value is present, and 1 if it isn't. Correlating these with each other and the original data can help determine if features tend to be missing together (missing at random - MAR) or not (missing completely at random - MCAR). 
+A method I use is a shadow matrix, in which the data-set consists of indicator features where a 0 is given if a value is present, and 1 if it isn't. Correlating these with each other and the original data can help determine if features tend to be missing together (missing at random - MAR) or not (missing completely at random - MCAR). 
 
-```{r}
+```{r, echo=FALSE}
 # Elements of x are 1 if a value in the data is missing and 0 if non-missing.
-x <- as.data.frame(abs(is.na(data)))
+x <- as.data.frame(abs(data$brand == "No Response"))
 
 # Extracting features that have some missing values.
 y <- x[which(sapply(x, sd) > 0)]
+colnames(y) <- "No Response"
 ```
 
 I selected the features with numerical values, then their correlations were verified.
-```{r}
+```{r, echo=FALSE}
 cor(data[, c("salary","age","credit")], y, use="pairwise.complete.obs")
 ```
 
@@ -74,49 +92,83 @@ rm(x, y)
 
 The correlations shows that they are missing at random.
 
-# Visualise the distributions of the variables
+# Distributions of the variables
 
-```{r, message=FALSE}
-ggplot(data, aes(age)) + geom_histogram()
+```{r, echo=FALSE, results='asis'}
+dfSummary(data, plain.ascii = FALSE, style = "grid", 
+          graph.magnif = 0.75, valid.col = FALSE, tmp.img.dir = "/tmp")
 ```
 
-```{r}
+```{r, message=FALSE, echo=FALSE}
+ggplot(data, aes(age)) + geom_histogram(bins = 35)
+```
+
+```{r, echo=FALSE}
 p <- ggplot(data, aes(salary, credit)) + geom_point()
 ggExtra::ggMarginal(p, type = "histogram")
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(data, aes(elevel, salary)) + geom_boxplot()
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(data, aes(elevel, credit)) + geom_boxplot()
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(data, aes(zipcode, salary)) + geom_boxplot()
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(data, aes(zipcode, credit)) + geom_boxplot()
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(data, aes(car, salary)) + geom_boxplot()
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(data, aes(car, credit)) + geom_boxplot()
 ```
 
-# Remove NA's in brand feature
-```{r}
-#Drops any rows with missing values and omits them forever
-dataSet <- na.omit(data)
+## Salary distribution by brand preference
+
+```{r, echo=FALSE}
+colors <- brewer.pal(12, "Paired")
 ```
 
-### Age and salary are discretized
-```{r}
+
+```{r, echo=FALSE}
+hgram <- ggplot(data, aes(salary, fill = brand)) + geom_histogram(bins = 100) +
+  scale_fill_manual(values = c(colors[8], colors[6], colors[10])) +
+  geom_vline(aes(xintercept = median(data$salary)), linetype = "dashed") +
+  labs(
+    x = "",
+    y = "",
+    title = "Salary distribution by brand preference",
+    subtitle = "Salaries are expressed in yearly thousands of euros",
+    caption = "NATU 2019"
+  ) +
+  geom_text(x = 120000, y = 210, label = "No Response", color = colors[8]) + 
+  geom_text(x = 160000, y = 160, label = "Belkin", color = colors[6]) +
+  geom_text(x = 160000, y = 100, label = "Elago", color = colors[10])
+ 
+hgram + theme(panel.background = element_rect(fill = "white", colour = "white"),
+              plot.title = element_text(hjust = -0.15),
+              plot.subtitle = element_text(hjust = -0.17),
+              legend.position = "none")
+```
+
+
+
+# Remove **No Response** observations in brand variable
+```{r, echo=FALSE}
+dataSet <- data %>% filter(brand != "No Response") %>% droplevels()
+```
+
+## Age and salary are discretized
+```{r, echo=FALSE}
 dataSet$ageCat <- cut(dataSet$age, 
                       breaks=c(-Inf, 40, 60, Inf), 
                       labels=c("young","adult","old"))
@@ -126,11 +178,11 @@ dataSet$salCat <- cut(dataSet$salary,
 summary(dataSet)
 ```
 
-```{r}
+```{r, echo=FALSE}
 cor(dataSet[, c("salary","age","credit")])
 ```
 
-### Comparing some features with and without NA's
+## Comparing some features with and without NA's
 ```{r table, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
 require(kableExtra)
 
@@ -142,132 +194,141 @@ colnames(dt) <- c("Min", "Max", "Median", "Min", "Max", "Median")
 
 kable(dt) %>%
   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>%
-  add_header_above(c(" " = 1, "With NA's" = 3, "Without NA's" = 3))
+  add_header_above(c(" " = 1, "With 'No Response'" = 3, "Without 'No Response'" = 3))
 ```
 
-# Visualise the distributions of the variables
+# Distributions of the variables
 
 ## Brand effect
 
 ### Age
-```{r, message=FALSE}
+```{r, message=FALSE, echo=FALSE}
 ggplot(dataSet, aes(age, fill = brand)) + geom_histogram() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(ageCat, fill = brand)) + geom_bar(position = "dodge")
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(elevel, age, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(zipcode, age, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(car, age, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
 ### Salary
-```{r}
+```{r, echo=FALSE}
 p <- ggplot(dataSet, aes(salary, credit, color = brand)) + geom_point()
 ggExtra::ggMarginal(p, type = "histogram")
 ```
 
-```{r, message=FALSE}
+```{r, message=FALSE, echo=FALSE}
 ggplot(dataSet, aes(salary, fill = brand)) + geom_histogram() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(salCat, fill = brand)) + geom_bar(position = "dodge")
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(elevel, salary, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(zipcode, salary, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(car, salary, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
 ### Credit
-```{r, message=FALSE}
+```{r, message=FALSE, echo=FALSE}
 ggplot(dataSet, aes(credit, fill = brand)) + geom_histogram() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(elevel, credit, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(zipcode, credit, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(car, credit, color = brand)) + geom_boxplot() + facet_grid(. ~ brand)
 ```
 
 ## Education level effect
 
-```{r, message=FALSE}
+```{r, message=FALSE, echo=FALSE}
 ggplot(dataSet, aes(age, fill = elevel)) + geom_histogram() + facet_grid(. ~ elevel)
 ```
 
-```{r, message=FALSE}
+```{r, message=FALSE, echo=FALSE}
 ggplot(dataSet, aes(ageCat, fill = elevel)) + geom_bar(position = "dodge")
 ```
 
-```{r, message=FALSE}
+```{r, message=FALSE, echo=FALSE}
 ggplot(dataSet, aes(salary, fill = elevel)) + geom_histogram() + facet_grid(. ~ elevel)
 ```
 
-```{r, message=FALSE}
+```{r, message=FALSE, echo=FALSE}
 ggplot(dataSet, aes(salCat, fill = elevel)) + geom_bar(position = "dodge")
 ```
 
-```{r}
+```{r, echo=FALSE}
 p <- ggplot(dataSet, aes(salary, credit, color = elevel)) + geom_point()
 ggExtra::ggMarginal(p, type = "histogram")
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(zipcode, salary, color = elevel)) + geom_boxplot() + facet_grid(. ~ elevel)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(zipcode, credit, color = elevel)) + geom_boxplot() + facet_grid(. ~ elevel)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(car, salary, color = elevel)) + geom_boxplot() + facet_grid(. ~ elevel)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(car, credit, color = elevel)) + geom_boxplot() + facet_grid(. ~ elevel)
 ```
 
 ## Models
 H: higher education level and age, higher salary
-```{r}
+```{r, echo=FALSE}
 model <- lm(salary ~ age + elevel, data = dataSet)
 
 summary(model)
 ```
 
-```{r}
+```{r, echo=FALSE}
 ggplot(dataSet, aes(age, salary, color = brand)) + geom_point() + facet_grid(. ~ brand+ elevel)
 ```
 
 H: higher salary, higher credit
-```{r}
+```{r, echo=FALSE}
 model <- lm(credit ~ salary, data = dataSet)
 
 summary(model)
 ```
+
+# Conclusion
+
+Age and salary are uniformly distributed and credit is normally distributed. Salary and credit have a high correlation (rho = 0.795). They are also correlated with education level, that is, people with a high level of education receive high salary and credit in banks and people with a low level of education receive low salary and credit. Car models 11 are generally more common with people with higher incomes, and car models 18 and 15 with people with lower incomes.
+
+There are more people at educational level 2, followed by level 3, level 1 and, finally, level 4. Age at educational level is equally distributed.
+
+Older people and people with intermediate income are associated with the Belkin brand and younger people and people with low or high income are associated with the Elago brand.
+
