--- a/scripts/secondWeekReport.Rmd
+++ b/scripts/secondWeekReport.Rmd
@@ -1,6 +1,6 @@
 ---
 title: $\color{#E31A1C}{\text{Belkin}}$ vs. $\color{#6A3D9A}{\text{Elago}}$
-subtitle: 'Exploratory Data Analysis'
+subtitle: 'Train the models'
 author: "Murilo Miranda"
 date: "`r format(Sys.Date(), '%Y-%B-%d')`"
 output:
@@ -8,7 +8,7 @@ output:
     toc: true # table of content true
     toc_float: true
     code_folding: hide
-    toc_depth: 3  # upto three depths of headings (specified by #, ## and ###)
+    toc_depth: 2  # upto three depths of headings (specified by #, ## and ###)
     theme: united
     highlight: breezedark  # specifies the syntax highlighting style
     #css: styles.css
@@ -31,11 +31,15 @@ st_css()
 ```
 
 ```{r, message = FALSE}
+library(here)
+library(kableExtra)
 library(sjPlot)
 library(forcats)
 library(dplyr)
 library(ggplot2)
 library(RColorBrewer)
+
+library(caret)
 ```
 
 
@@ -47,16 +51,16 @@ colors <- brewer.pal(12, "Paired")
 The data has empty values and the columns are separated by semicolon. **read.csv2** function was used because it has semi-colon as default sep-argument. To solve the problem with empty values, na.strings argument was used with empty value and single space.
 
 ```{r, echo=FALSE}
-data <- read.csv2("data/surveyBelkinElago.csv", na.strings = c("", " "))
+data <- read.csv2(here("data/surveyBelkinElago.csv"), na.strings = c("", " "))
 
 str(data)
 ```
 
 # Preprocessing
-## Check data types
+### Check data types
 In the data-set elevel, car and zipcode are integers. In reality, they are categorical variables, so they are converted into factor. The missing values are converted into 'No Response'.
 
-## Data conversions
+### Data conversions
 ```{r, echo=FALSE}
 data$elevel <- as.factor(data$elevel)
 levels(data$elevel) <- c("HSch", "Prof", "Coll", "Mast")
@@ -78,67 +82,20 @@ data$brand <- factor(data$brand, levels = c("No Response", "Belkin", "Elago"))
 head(data)
 ```
 
-## Check duplicate observations
+### Check duplicate observations
 ```{r, echo=FALSE}
 anyDuplicated(data)
 ```
 
-## Correlation between variables
-```{r, echo=FALSE}
-cor(data[, c("salary","age","credit")])
-```
+### Separate the dataset into two dataset
+dataSet with all information that will be used to train our models and no Response dataset as new information and we will use it to predict if those customers will prefere Belkin or Elago.
 
-### Are missing values at random?
-A method I use is a shadow matrix, in which the data-set consists of indicator features where a 0 is given if a value is present, and 1 if it isn't. Correlating these with each other and the original data can help determine if features tend to be missing together (missing at random - MAR) or not (missing completely at random - MCAR). 
-
-```{r, echo=FALSE}
-# Elements of x are 1 if a value in the data is missing and 0 if non-missing.
-x <- as.data.frame(abs(data$brand == "No Response"))
-
-# Extracting features that have some missing values.
-y <- x[which(sapply(x, sd) > 0)]
-colnames(y) <- "No Response"
-```
-
-I selected the features with numerical values, then their correlations were verified.
-```{r, echo=FALSE}
-cor(data[, c("salary","age","credit")], y, use="pairwise.complete.obs")
-```
-
-```{r, echo=FALSE}
-rm(x, y)
-```
-
-The correlations shows that they are missing at random.
-
-## Distributions of the variables
-
-```{r, echo=FALSE, results='asis'}
-dfSummary(data, plain.ascii = FALSE, style = "grid", 
-          graph.magnif = 0.75, valid.col = FALSE, tmp.img.dir = "/tmp")
-```
-
-# Remove **No Response** observations in brand variable
 ```{r, echo=FALSE}
 dataSet <- data %>% filter(brand != "No Response") %>% droplevels()
+noResponse <- data %>% filter(brand == "No Response") %>% droplevels()
 ```
 
-## Comparing some variables with and without **No Response**
-```{r table, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
-require(kableExtra)
-
-dt <- data.frame(rbind(
-  salary = c(19583, 161748, 87244, 20000, 150000, 84969),
-  age    = c(20   ,   80  ,   50 ,  20  ,   80  ,   50),
-  credit = c(423.7,  849.0, 638.9, 423.7,  849.0,  635.5)))
-colnames(dt) <- c("Min", "Max", "Median", "Min", "Max", "Median")
-
-kable(dt) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>%
-  add_header_above(c(" " = 1, "With 'No Response'" = 3, "Without 'No Response'" = 3))
-```
-
-## Correlation
+### Correlation
 ```{r, echo=FALSE}
 cor(dataSet[, c("salary","age","credit")])
 ```
@@ -150,7 +107,7 @@ dfSummary(dataSet, plain.ascii = FALSE, style = "grid",
           graph.magnif = 0.75, valid.col = FALSE, tmp.img.dir = "/tmp")
 ```
 
-# Results
+# Exploratory Data Analysis
 
 ```{r, echo=FALSE}
 hgram <- ggplot(dataSet, aes(salary, fill = brand)) + geom_histogram(bins = 100) +
@@ -192,7 +149,7 @@ hgram + theme(panel.background = element_rect(fill = "white", colour = "white"),
               legend.position = "none")
 ```
 
-## Model Hypothesis Testing
+### Model Hypothesis Testing
 
 The null hypothesis ($H_0$): age and educational level don't affect salary, and the alternative hypothesis ($H_1$): age or educational level  do affect the salary amount.
 
@@ -234,12 +191,56 @@ dataSet %>%
         legend.position = "none")
 ```
 
-# Conclusion
+### Conclusion
 
 Age and salary are uniformly distributed and credit is normally distributed. Salary and credit have a high correlation ($\rho$ = 0.795). They are also correlated with educational level, that is, people with a high level of education receive high salary and credit in banks and people with a low level of education receive low salary and credit.
 
 There are more people with **Professional Diploma**, followed by **College Degree**, **High School Degree or lower**, finnally, **Master's Degree or Higher**. Age at educational level is equally distributed.
 
 Older people and people with intermediate income are associated with the $\color{#E31A1C}{\text{Belkin}}$ brand and younger people and people with low or high income are associated with the $\color{#6A3D9A}{\text{Elago}}$ brand.
+
+
+# Preprocessing 2
+As salary, credit and age have different units and variance, we will scale and center the numerical data by using the convenient preprocess() in **caret**.
+
+```{r}
+# Centering and scaling numerical columns
+preProcValues <- preProcess(dataSet, method = c("center","scale"))
+
+dataSetProcessed <- predict(preProcValues, dataSet)
+```
+
+**Caret** assumes that all of the data are numeric, i.e. factors have been converted to dummy variables via model.matrix, dummyVars or other means. But first, we will convert brand variable to numeric (0: Belkin and 1: Elago).
+
+```{r}
+dataSetProcessed$brand <- ifelse(dataSetProcessed$brand == 'Belkin', 0, 1)
+
+# Converting every categorical variable to numerical using dummy variables
+dmy <- dummyVars(" ~ .", data = dataSetProcessed)
+
+dataSetTransformed <- data.frame(predict(dmy, newdata = dataSetProcessed))
+```
+
+The data generating mechanism can create predictors that only have a single unique value (i.e. a “zero-variance predictor”). For many models (excluding tree-based models), this may cause the model to crash or the fit to be unstable. Here, we verify whether there are zero-variance predictors.
+
+```{r}
+# Identification of near zero variance predictors
+kable(head(nearZeroVar(dataSetTransformed, saveMetrics= TRUE))) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+```
+
+All variables do not have zero-variance, although some variables associated with car models have near zero-variance.
+
+
+We also test linear dependency between/among variables. For each linear combination, one variable will be removed.
+
+```{r}
+# Linear Dependencies
+(linearDepend <- findLinearCombos(dataSetTransformed))
+
+dataSetTransformed <- dataSetTransformed[, -linearDepend$remove]
+```
+
+The function shows that there are two linear combinations and indicates that we should remove two variables (Opel car model and East-Central Europe zipcode).
 
 <br>
